--- a/src/templates/_header.html
+++ b/src/templates/_header.html
@@ -1,3 +1,23 @@
 <header class="header @@if(this.mod){header_@@mod}">
-  
+	<div class="header__inner container">
+		<button class="header__navi-toggle"></button>
+		<a class="header__logo" href="./">Logo</a>
+		<div class="header__navi h-navi">
+			<button class="h-navi__close"></button>
+			<nav class="h-navi__menu" data-scroll-lock-scrollable>
+				<a class="h-navi__link" href="./">новинки</a>
+				<a class="h-navi__link" href="./">для неё</a>
+				<a class="h-navi__link" href="./">для него</a>
+				<a class="h-navi__link" href="./">unisex</a>
+				<a class="h-navi__link" href="./">о нас</a>
+				<a class="h-navi__link" href="./">сотрудничество</a>
+				<a class="h-navi__link" href="./">контакты</a>
+			</nav>
+			<div class="h-navi__utils utils">
+				<a class="utils__button utils__button_card" href="./"></a>
+				<button class="utils__button utils__button_search"></button>
+				<button class="utils__button utils__button_favorites"></button>
+			</div>
+		</div>
+	</div>
 </header>
