--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,17 +27,18 @@ $breakpoints: (
 );
 
 
-// @include font-face("Montserrat-ExtraLight", "DM", 100);
-// @include font-face("Montserrat-ExtraBold", "DM", 800);
-// @include font-face("Montserrat-SemiBold", "DM", 600);
-// @include font-face("Montserrat-Regular", "DM", 400);
-// @include font-face("Montserrat-Medium", "DM", 500);
-// @include font-face("Montserrat-Light", "DM", 300);
-// @include font-face("Montserrat-Black", "DM", 900);
-// @include font-face("Montserrat-Bold", "DM", 700);
-// @include font-face("Montserrat-Thin", "DM", 200);
+@include font-face("Inter-ExtraLight", "IN", 100);
+@include font-face("Inter-ExtraBold", "IN", 800);
+@include font-face("Inter-SemiBold", "IN", 600);
+@include font-face("Inter-Regular", "IN", 400);
+@include font-face("Inter-Medium", "IN", 500);
+@include font-face("Inter-Light", "IN", 300);
+@include font-face("Inter-Black", "IN", 900);
+@include font-face("Inter-Bold", "IN", 700);
+@include font-face("Inter-Thin", "IN", 200);
+@include font-face("Nudla-Thin", "NT", 200);
 
-// @import "../../node_modules/swiper/swiper";
+@import "../../node_modules/swiper/swiper";
 
 // Import BEM blocks scss
 @import "../blocks/**/*.scss";
@@ -57,7 +58,7 @@ body, html {
 	box-sizing: border-box;
 	background-color: #fafafa;
 	font-size: var(--size);
-	font-family: sans-serif;
+	font-family: "IN", sans-serif;
 	line-height: 1.2;
 	font-weight: 400;
 	min-height: 100vh;
