--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -12,12 +12,27 @@
 
 	&__slide {
 		height: auto;
+		position: relative;
 		
 		img {
 			display: block;
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+		}
+
+		&::before {
+			content: attr(data-text);
+			position: absolute;
+			font-family: "ND", sans-serif;
+			color: #fff;
+			text-transform: uppercase;
+			font-size: 54px;
+			left: 24px;
+			right: 24px;
+			bottom: 5%;
+			
+			text-align: center;
 		}
 	}
 
