--- a/src/blocks/f-navi/f-navi.scss
+++ b/src/blocks/f-navi/f-navi.scss
@@ -1,28 +1,68 @@
 .f-navi {
 	$self: &;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 20px;
+
 
 	&__col {
+		display: flex;
+		flex-flow: column nowrap;
 
 	}
 
 	&__title {
-
+		display: block;
+		text-transform: uppercase;
+		text-decoration: none;
+		font-weight: 600;
+		font-size: 14px;
+		margin-bottom: 15px;
+		color: inherit;
+	}
+	
+	a#{$self}__title:hover {
+		text-decoration: underline;
 	}
 
 	&__soc {
-
+		padding-top: 10px;
+		margin-bottom: 50px;
 	}
 
 	&__links {
-
+		padding-top: 15px;
+		margin-bottom: 30px;
 	}
 
 	&__link {
+		display: block;
+		font-size: 14px;
+		text-decoration: none;
+		color: inherit;
+		padding: 10px 0;
 
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 
 	&__phone {
-
+		color: inherit;
+		text-decoration: none;
+		align-self: flex-start;
+		
+		span:nth-child(1) {
+			display: block;
+			font-family: "CR", sans-serif;
+			font-size: 35px;
+		}
+		
+		span:nth-child(2) {
+			display: block;
+			font-size: 14px;
+			color: #B1B1B1;
+			text-align: right;
+		}
 	}
-
 }
