--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -46,6 +46,10 @@
 			width: auto;
 			max-width: 185px;
 		}
+		
+		@include media('<=lg') {
+			max-width: 170px;
+		}
 
 		img {
 			display: block;
