--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -60,7 +60,8 @@ $breakpoints: (
 
 body, html {
 	box-sizing: border-box;
-	background-color: #fafafa;
+	background-color: #fff;
+	color: #000;
 	font-size: var(--size);
 	font-family: "IN", sans-serif;
 	line-height: 1.2;
