--- a/src/templates/_bottom.html
+++ b/src/templates/_bottom.html
@@ -7,61 +7,62 @@
 					<svg><use xlink:href="#icon-soc-vk"></use></svg>
 				</a>
 				<a class="social__link" href="./">
-					<svg><use xlink:href="#icon-soc-in"></use></svg>
-				</a>
-				<a class="social__link" href="./">
 					<svg><use xlink:href="#icon-soc-tg"></use></svg>
 				</a>
+				<a class="social__link" href="./">
+					<svg><use xlink:href="#icon-soc-in"></use></svg>
+				</a>
+			</div>
+			<a class="f-navi__title" href="./">Каталог</a>
+			<a class="f-navi__title" href="./">Как сделать заказ</a>
+			<a class="f-navi__title" href="./">Магазины</a>
+		</div>
+		<div class="f-navi__col">
+			<h2 class="f-navi__title">Информация</h2>
+			<div class="f-navi__links">
+				<a class="f-navi__link" href="./">Доставка</a>
+				<a class="f-navi__link" href="./">Оплата</a>
+				<a class="f-navi__link" href="./">Политика конфиденциальности</a>
+				<a class="f-navi__link" href="./">Публичная оферта</a>
+				<a class="f-navi__link" href="./">Возврат</a>
+			</div>
+			<h2 class="f-navi__title">Информация</h2>
+			<div class="f-navi__links">
+				<a class="f-navi__link" href="./">Таблица размеров</a>
+				<a class="f-navi__link" href="./">Образы</a>
+				<a class="f-navi__link" href="./">Вопрос-ответ</a>
 			</div>
 		</div>
-		<a class="f-navi__title" href="./">Каталог</a>
-		<a class="f-navi__title" href="./">Как сделать заказ</a>
-		<a class="f-navi__title" href="./">Магазины</a>
-	</div>
-	<div class="f-navi__col">
-		<h2 class="f-navi__title">Информация</h2>
-		<div class="f-navi__links">
-			<a class="f-navi__link" href="./">Доставка</a>
-			<a class="f-navi__link" href="./">Оплата</a>
-			<a class="f-navi__link" href="./">Политика конфиденциальности</a>
-			<a class="f-navi__link" href="./">Публичная оферта</a>
-			<a class="f-navi__link" href="./">Возврат</a>
+		<div class="f-navi__col">
+			<h2 class="f-navi__title">О компании</h2>
+			<div class="f-navi__links">
+				<a class="f-navi__link" href="./">Сотрудничество</a>
+				<a class="f-navi__link" href="./">История бренда</a>
+				<a class="f-navi__link" href="./">Производство</a>
+				<a class="f-navi__link" href="./">Новости</a>
+				<a class="f-navi__link" href="./">Вакансии</a>
+				<a class="f-navi__link" href="./">Контакты</a>
+			</div>
 		</div>
-		<h2 class="f-navi__title">Информация</h2>
-		<div class="f-navi__links">
-			<a class="f-navi__link" href="./">Таблица размеров</a>
-			<a class="f-navi__link" href="./">Образы</a>
-			<a class="f-navi__link" href="./">Вопрос-ответ</a>
-		</div>
-	</div>
-	<div class="f-navi__col">
-		<h2 class="f-navi__title">О компании</h2>
-		<div class="f-navi__links">
-			<a class="f-navi__link" href="./">Сотрудничество</a>
-			<a class="f-navi__link" href="./">История бренда</a>
-			<a class="f-navi__link" href="./">Производство</a>
-			<a class="f-navi__link" href="./">Новости</a>
-			<a class="f-navi__link" href="./">Вакансии</a>
-			<a class="f-navi__link" href="./">Контакты</a>
+		<div class="f-navi__col">
+			<a class="f-navi__phone" href="tel:+74955410707">
+				<span>8 (495) 541 07 07</span>
+				<span>Звонок бесплатный</span>
+			</a>
+			<div class="f-navi__links">
+				<span class="f-navi__link">доб. 1220, 1221, 1230, 1234.</span>
+				<span class="f-navi__link">ПН–ПТ: 09:00–17:30 (по мск)</span>
+				<a class="f-navi__link" href="mailto:sales@volnui.ru">sales@volnui.ru</a>
+			</div>
 		</div>
 	</div>
-	<div class="f-navi__col">
-		<a class="f-navi__phone" href="tel:+74955410707">
-			<span>8 (495) 541 07 07</span>
-			<span>Звонок бесплатный</span>
-		</a>
-		<div class="f-navi__links">
-			<span class="f-navi__link">доб. 1220, 1221, 1230, 1234.</span>
-			<span class="f-navi__link">ПН–ПТ: 09:00–17:30 (по мск)</span>
-			<a class="f-navi__link" href="mailto:sales@volnui.ru">sales@volnui.ru</a>
-		</div>
-	</div>
+	<hr />
 	<div class="footer__bottom container">
 		<div class="footer__copy">
 			&copy; 2024 Все права защищены.<br/>
 			Использование материалов с сайта без разрешения правообладателя и активной ссылки на сайт запрещено.
 		</div>
-		<div class="footer__dev">Разработка сайта — <a href="./">sepayr.ru</a></div>
+		<div class="footer__dev">разработка сайта — <a href="./">sepayr.ru</a></div>
 	</div>
 </footer> 
 
