--- a/src/blocks/h-navi/h-navi.scss
+++ b/src/blocks/h-navi/h-navi.scss
@@ -30,6 +30,10 @@
 			padding: 8px 10px;
 			margin: 0;
 		}
+		
+		@include media('<=lg') {
+			font-size: 12px;
+		}
 
 		&::before {
 			content: attr(data-hint);
