--- a/src/blocks/news/news.scss
+++ b/src/blocks/news/news.scss
@@ -1,20 +1,31 @@
 .news {
 	$self: &;
+	margin-bottom: 70px;
+	@keyframes showItem {
+		from { opacity: 0; }
+		to { opacity: 1; }
+	}
+
 
 	&__title {
-
+		margin-bottom: 50px;
 	}
 
-	&__inner {
-
+	&__items {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-gap: 30px 12px;
+		margin-bottom: 20px;
 	}
 
-	&__card {
-
+	&__item {
+		
+		&.showing {
+			animation: showItem 0.5s;
+		}
 	}
 
 	&__more {
-
+		margin: 0 auto;
 	}
-
 }
