--- a/src/blocks/social/social.scss
+++ b/src/blocks/social/social.scss
@@ -1,8 +1,20 @@
 .social {
 	$self: &;
+	display: flex;
+	flex-wrap: wrap;
 
 	&__link {
+		outline: 1px solid #f2f2f2;
+		height: 60px;
+		width: 60px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 
+		svg {
+			fill: #808080;
+			max-height: 24px;
+			max-width: 24px;
+		}
 	}
-
 }
