--- a/src/blocks/subscribe/subscribe.scss
+++ b/src/blocks/subscribe/subscribe.scss
@@ -1,44 +1,81 @@
 .subscribe {
 	$self: &;
+	margin-bottom: 100px;
 
 	&__inner {
-
+		max-width: 1070px !important;
 	}
 
 	&__title {
-
+		text-transform: uppercase;
+		margin-bottom: 40px;
 	}
 
 	&__text {
-
+		margin-bottom: 50px;
+		text-align: center;
+		line-height: 1.9;
+		font-size: 14px;
 	}
 
 	&__form {
 
 	}
-
+	
 	&__fields {
-
+		margin-bottom: 30px;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-gap: 10px;
 	}
 
 	&__field {
-
+		border-bottom: 1px solid #D9D9D9;
+		
+		&::before {
+			display: block;
+			content: attr(data-title);
+			text-transform: uppercase;
+			font-size: 12px;
+		}
+		
+		input {
+			@extend %reset-input;
+			height: 60px;
+			width: 100%;
+			min-width: 0;
+			font-size: 14px;
+		}
 	}
 
 	&__bottom {
-
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
 	}
 
 	&__agree {
+		display: flex;
 
+		input[type='checkbox'] {
+			align-self: flex-start;
+		}
 	}
 
 	&__agree-side {
+		box-sizing: border-box;
+		font-size: 12px;
+		margin-right: 24px;
+		padding-left: 15px;
 
+		a {
+			display: block;
+			color: inherit;
+			margin-bottom: 10px;
+		}
 	}
 
 	&__submit {
 
 	}
-
 }
