--- a/src/blocks/utils/utils.scss
+++ b/src/blocks/utils/utils.scss
@@ -17,6 +17,11 @@
 		@include media('<=xlg') {
 			max-width: 50px;
 		}
+		
+		@include media('<=lg') {
+			min-width: 30px;
+			max-width: 40px;
+		}
 
 		&_card {
 			
@@ -34,6 +39,10 @@
 			fill: #fff;
 			display: block;
 			max-height: 22px;
+			
+			@include media('<=lg') {
+				max-height: 18px;
+			}
 		}
 	}
 }
