--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -1,44 +1,169 @@
 .card {
 	$self: &;
-
+	min-width: 0;
+	overflow: hidden;
+	font-family: "CR", sans-serif;
+	
 	&__tabs {
-
+		position: relative;
 	}
 
 	&__sliders {
-
+		
 	}
-
+	
 	&__slider {
+		position: relative;
 
+		&::before, &::after {
+			display: block;
+			position: absolute;
+			text-transform: uppercase;
+			border-radius: 2px;
+			line-height: 1;
+			z-index: 3;
+			top: 10px;
+		}
+		
+		&::before {
+			content: attr(data-badge);
+			background-color: #3CFFB9;
+			padding: 5px 7px;
+			font-weight: 700;
+			font-size: 9px;
+			left: 10px;
+		}
+		
+		&::after {
+			content: attr(data-discount);
+			background-color: #fff;
+			padding: 4px 9px 3px;
+			font-size: 12px;
+			right: 10px;
+		}
+
+		&:hover {
+			#{$self}__link {
+				opacity: 1;
+				transform: none;
+			}
+		}
+	}
+	
+	&__slide {
+		@include aspect-ratio(3, 4.2);
+	
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
 	}
 
-	&__slide {
+	&__dots {
+		box-sizing: border-box;
+		display: flex;
+		position: absolute;
+		z-index: 2;
+		bottom: 5px;
+		left: 10px;
+		right: 10px;
+	}
 
+	&__dot {
+		box-sizing: border-box;
+		height: 3px;
+		margin-right: 2px;
+		background-color: #C2C5C7;
+		opacity: 0.5;
+		flex-grow: 1;
+		transition: opacity 0.5s;
+		
+		&.active {
+			opacity: 1;
+		}
+
+		&:last-child {
+			margin: 0;
+		}
 	}
 
 	&__link {
-
+		box-sizing: border-box;
+		position: absolute;
+		bottom: 50px;
+		left: 10px;
+		right: 10px;
+		z-index: 1;
+		opacity: 0;
+		transform: translateY(50%);
+		transition: opacity 0.3s, transform 0.3s;
+		color: #fff;
+		text-transform: uppercase;
+		text-decoration: none;
+		text-align: center;
+		font-weight: 300;
+		font-size: 14px;
+		padding: 10px;
+		border: 1px solid #fff;
 	}
 
 	&__toggles {
+		position: absolute;
+		bottom: 20px;
+		left: 10px;
+		z-index: 2;
+	}
 
+	&__toggle {
+		@extend %reset-button;
+		width: 16px;
+		height: 16px;
+		border-color: transparent;
+		border-radius: 50%;
+		position: relative;
+
+		&::before {
+			position: absolute;
+			display: block;
+			content: '';
+			width: 9px;
+			height: 9px;
+			top: 50%;
+			left: 50%;
+			background-color: #858585;
+			transform: translate(-50%, -50%);
+			border-radius: 50%;
+		}
+	
+		&.active {
+			border: 2px solid #b1b1b1;
+			
+			&::before {
+				width: 7px;
+				height: 7px;
+				background-color: #162252;
+			}
+		}
 	}
 
 	&__bottom {
-
+		padding-top: 10px;
+		display: flex;
 	}
 
 	&__title {
-
+		margin-right: auto;
 	}
 
 	&__irrelevant {
-
+		color: #B1B1B1;
+		text-decoration: line-through;
+		margin-right: 20px;
 	}
 
 	&__price {
 
 	}
-
 }
