--- a/src/scss/lib/additional.scss
+++ b/src/scss/lib/additional.scss
@@ -207,7 +207,7 @@ $images-path: "images/";
 	article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,main{
 		display: block;
 	}
-	img, svg {
+	img, svg, video {
 		max-width: 100%;
 		height: auto;
 	}
