--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -25,34 +25,87 @@
 			content: attr(data-text);
 			position: absolute;
 			font-family: "ND", sans-serif;
-			color: #fff;
 			text-transform: uppercase;
-			font-size: 54px;
-			left: 24px;
-			right: 24px;
-			bottom: 5%;
-			
 			text-align: center;
+			font-size: 54px;
+			color: #fff;
+			right: 24px;
+			left: 24px;
+			bottom: 5%;
 		}
 	}
 
-	&__cover {
+	&__status {
 		position: absolute;
 	}
 
-	&__status {
-
+	&__dots {
+		position: absolute;
+		display: flex;
+		border-top: 1px solid #fff;
+		padding-top: 28px;
+		z-index: 3;
+		left: 70px;
+		bottom: 20%;
+		
+		@include media('<=xxxlg') {
+			left: 24px;
+		}
 	}
+	
+	&__dot {
+		box-sizing: border-box;
+		width: 8px;
+		height: 8px;
+		border-radius: 50%;
+		border: 1px solid #fff;
+		cursor: pointer;
+		
+		&.active {
+			background-color: #fff;
+		}
 
-	&__pagination {
-
+		&:not(:last-child) {
+			margin-right: 14px;
+		}
 	}
-
+	
 	&__button {
-
+		box-sizing: border-box;
+		position: absolute;
+		z-index: 3;
+		color: #fff;
+		border: 1px solid #fff;
+		text-decoration: none;
+		text-transform: uppercase;
+		font-size: 14px;
+		font-weight: 600;
+		padding: 36px;
+		width: 100%;
+		max-width: 300px;
+		text-align: center;
+		left: 200px;
+		top: 50%;
+		transform: translateY(-50%);
 	}
-
+	
 	&__link {
+		box-sizing: border-box;
+		position: absolute;
+		right: 150px;
+		top: 50%;
+		z-index: 3;
+		width: 115px;
+		height: 115px;
+		background: url('#{$images-path}watch.svg') center / contain no-repeat transparent;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 
+		svg {
+			fill: #3CFFB9;
+			width: 25px;
+			height: 14px;
+		}
 	}
 }
