--- a/src/blocks/f-navi/f-navi.scss
+++ b/src/blocks/f-navi/f-navi.scss
@@ -56,6 +56,7 @@
 			display: block;
 			font-family: "CR", sans-serif;
 			font-size: 35px;
+			white-space: nowrap;
 		}
 		
 		span:nth-child(2) {
