--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -8,6 +8,7 @@
 	font-size: 12px;
 	font-weight: 700;
 	padding: 20px 40px;
+	text-align: center;
 	text-transform: uppercase;
 	background-color: #3CFFB9;
 	font-family: "IN", sans-serif;
