--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -161,9 +161,10 @@
 		color: #B1B1B1;
 		text-decoration: line-through;
 		margin-right: 20px;
+		white-space: nowrap;
 	}
-
+	
 	&__price {
-
+		white-space: nowrap;
 	}
 }
