--- a/src/blocks/feed/feed.scss
+++ b/src/blocks/feed/feed.scss
@@ -1,9 +1,25 @@
 .feed {
 	$self: &;
 	margin-bottom: 80px;
+	
+	@include media('<=md') {
+		margin-bottom: 60px;
+	}
+	
+	@include media('<=xxs') {
+		margin-bottom: 40px;
+	}
 
 	&__title {
 		margin-bottom: 70px;
+	
+		@include media('<=md') {
+			margin-bottom: 50px;
+		}
+		
+		@include media('<=xxs') {
+			margin-bottom: 30px;
+		}
 	}
 
 	&__items {
@@ -26,6 +42,14 @@
 		
 		@include media('<=md') {
 			grid-gap: 50px 20px;
+		}
+		
+		@include media('<=840px') {
+			grid-template-columns: repeat(2, 1fr);
+		}
+		
+		@include media('<=520px') {
+			grid-template-columns: 1fr;
 		}
 	}
 
