--- a/src/blocks/news/news.scss
+++ b/src/blocks/news/news.scss
@@ -11,6 +11,14 @@
 		grid-template-columns: repeat(3, 1fr);
 		grid-gap: 30px 12px;
 		margin-bottom: 20px;
+		
+		@include media('<=md') {
+			grid-template-columns: repeat(2, 1fr);
+		}
+		
+		@include media('<=520px') {
+			grid-template-columns: 1fr;
+		}
 	}
 
 	&__item {
