--- a/src/templates/_card.html
+++ b/src/templates/_card.html
@@ -9,7 +9,7 @@
 							<div class="card__slide swiper-slide"><img src="./images/card-image-4.webp" alt=""></div>
 						</div>
 						<div class="card__dots"></div>
-						<a class="card__link" href="./">Смотреть весь образ</a>
+						<a class="card__link" href="./detail.html">Смотреть весь образ</a>
 					</div>
 					<div class="card__slider tab__block swiper" data-badge="new" data-discount="-20%">
 						<div class="swiper-wrapper">
@@ -18,7 +18,7 @@
 							<div class="card__slide swiper-slide"><img src="./images/card-image-1.webp" alt=""></div>
 						</div>
 						<div class="card__dots"></div>
-						<a class="card__link" href="./">Смотреть весь образ</a>
+						<a class="card__link" href="./detail.html">Смотреть весь образ</a>
 					</div>
 				</div>
 				<div class="card__toggles tab__buttons">
