--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,7 +62,7 @@ body, html {
 	background-color: #fff;
 	color: #000;
 	font-size: var(--size);
-	font-family: "IN", sans-serif;
+	font-family: "CR", sans-serif;
 	line-height: 1.2;
 	font-weight: 400;
 	min-height: 100vh;
