--- a/src/templates/sprite.symbol.html
+++ b/src/templates/sprite.symbol.html
@@ -110,7 +110,7 @@ They might well be outsourced to an external stylesheet of course.
  .svg-icon-arr-right-short-dims { width: 9px; height: 9px; }
  .svg-icon-cart-dims { width: 28px; height: 22px; }
  .svg-icon-cat-dims { width: 13px; height: 9px; }
- .svg-icon-check-dims { width: 9px; height: 7px; }
+ .svg-icon-favorite-dims { width: 23px; height: 20px; }
  .svg-icon-filter-dims { width: 12px; height: 11px; }
  .svg-icon-filter-round-dims { width: 17px; height: 17px; }
  .svg-icon-geo-dims { width: 9px; height: 12px; }
@@ -152,7 +152,7 @@ for further details on how to create this embeddable sprite variant.
      <symbol viewBox="0 0 9 9" id="icon-arr-right-short" xmlns="http://www.w3.org/2000/svg"><path d="M3.822 1.014 4.62.23l3.962 3.948L4.62 8.14l-.798-.784L6.44 4.738H.7v-1.12h5.726L3.822 1.014Z"/></symbol>
      <symbol viewBox="0 0 28 22" id="icon-cart" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M27.762 5.08c-.407 1.03-2.184 5.486-2.545 6.383-.815 2.025-.645 2.025-3.224 2.025H6.04v1.99h15.612v2.095H5.396c-1.697 0-1.459-.858-1.459-1.58V4.737L0 1.82 1.425 0l4.413 3.295H26.54c1.663 0 1.629.755 1.221 1.785Zm-21.755.308v6.041H22.91l2.478-6.04H6.007ZM5.94 18.225c1.031 0 1.867.845 1.867 1.887A1.877 1.877 0 0 1 5.94 22a1.877 1.877 0 0 1-1.866-1.888c0-1.042.835-1.887 1.866-1.887Zm16.325 0c1.031 0 1.867.845 1.867 1.887A1.877 1.877 0 0 1 22.264 22a1.877 1.877 0 0 1-1.866-1.888c0-1.042.835-1.887 1.866-1.887Z"/></symbol>
      <symbol viewBox="0 0 13 9" id="icon-cat" xmlns="http://www.w3.org/2000/svg"><path d="M.5 0h12v1H.5V0ZM.5 4h6v1h-6V4ZM.5 8h12v1H.5V8Z"/></symbol>
-     <symbol viewBox="0 0 9 7" id="icon-check" xmlns="http://www.w3.org/2000/svg"><path d="M8.5.897 7.602 0 3.316 4.285 1.398 2.367.5 3.265 3.316 6.08 8.5.897Z"/></symbol>
+     <symbol viewBox="0 0 23 20" id="icon-favorite" xmlns="http://www.w3.org/2000/svg"><path d="M11.173 18.733 2.145 9.891C1.438 9.198.986 7.983 1 6.59c.014-1.378.484-2.784 1.424-3.805 1.924-2.09 5.88-2.607 8.383-.065l.7.71.712-.697c2.562-2.51 6.156-2.104 8.236.016l.714-.7-.714.7c.856.872 1.429 2.229 1.508 3.642.08 1.404-.331 2.749-1.282 3.68l-8.86 8.677.7.715-.7-.715c-.183.18-.285.219-.317.226-.018-.004-.122-.036-.33-.24Zm.319.241h.01-.01Z" stroke-width="2"/></symbol>
      <symbol viewBox="0 0 12 11" id="icon-filter" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.926 9.985a1.494 1.494 0 0 1-2.829 0H0v-.997h8.11a1.494 1.494 0 0 1 2.803 0H12v.997h-1.074Zm-1.433-.99a.51.51 0 1 0 0 1.02.51.51 0 0 0 0-1.02Zm-3.484-2A1.494 1.494 0 0 1 4.595 5.98H0v-.997h4.608a1.494 1.494 0 0 1 2.803 0H12v.997H7.424c-.2.59-.758 1.015-1.415 1.015ZM5.991 4.99a.51.51 0 1 0 0 1.02.51.51 0 0 0 0-1.02Zm-3.484-2a1.494 1.494 0 0 1-1.415-1.015H0V.978h1.105a1.494 1.494 0 0 1 2.803 0H12v.997H3.921c-.2.59-.757 1.015-1.414 1.015ZM2.488.985a.51.51 0 1 0 .001 1.02.51.51 0 0 0 0-1.02Z"/></symbol>
      <symbol viewBox="0 0 17 17" id="icon-filter-round" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.469 16.998H.509a.505.505 0 0 1-.509-.5c0-.278.228-.502.509-.502h15.96c.28 0 .509.224.509.5a.505.505 0 0 1-.51.502Zm0-6.82H7.927a2.566 2.566 0 0 1-2.524 2.037 2.566 2.566 0 0 1-2.524-2.036H.51A.505.505 0 0 1 0 9.678c0-.277.228-.502.509-.502h2.37a2.566 2.566 0 0 1 2.524-2.034c1.247 0 2.287.874 2.524 2.034h8.542c.28 0 .509.225.509.502a.505.505 0 0 1-.51.5ZM5.403 8.146c-.86 0-1.557.686-1.557 1.534 0 .847.697 1.534 1.557 1.534s1.557-.687 1.557-1.534c0-.848-.697-1.534-1.557-1.534ZM16.47 3.037H15.14a2.566 2.566 0 0 1-2.524 2.035 2.566 2.566 0 0 1-2.524-2.035H.51A.505.505 0 0 1 0 2.535c0-.277.228-.501.509-.501h9.584A2.566 2.566 0 0 1 12.615 0c1.247 0 2.287.874 2.524 2.034h1.329c.28 0 .509.224.509.501a.505.505 0 0 1-.51.502Zm-3.853-2.035c-.86 0-1.557.687-1.557 1.534s.697 1.534 1.557 1.534 1.557-.687 1.557-1.534-.697-1.534-1.557-1.534Z"/></symbol>
      <symbol viewBox="0 0 9 12" id="icon-geo" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.6 4.478a2.124 2.124 0 1 1-4.248 0 2.124 2.124 0 0 1 4.248 0Z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M4.479 0a4.484 4.484 0 0 1 4.478 4.479c0 2.296-3.1 5.626-4.478 7.52C3.1 10.106 0 6.776 0 4.48A4.484 4.484 0 0 1 4.479 0Zm0 1.722c1.492 0 2.755 1.264 2.755 2.756 0 1.493-1.263 2.756-2.755 2.756-1.493 0-2.756-1.263-2.756-2.756 0-1.492 1.263-2.756 2.756-2.756Z"/></symbol>
@@ -234,13 +234,13 @@ embedded above. They may be styled via CSS.
                     </div>
                     <h2>icon-cat, </h2>
                 </li>
-             <li title="icon-check">
+             <li title="icon-favorite">
                     <div class="icon-box">
-                        <svg class="svg-icon-check-dims">
-                            <use xlink:href="#icon-check"></use>
+                        <svg class="svg-icon-favorite-dims">
+                            <use xlink:href="#icon-favorite"></use>
                         </svg>
                     </div>
-                    <h2>icon-check, </h2>
+                    <h2>icon-favorite, </h2>
                 </li>
              <li title="icon-filter">
                     <div class="icon-box">
@@ -421,13 +421,13 @@ SVG sprite. They may be styled via CSS.
                     </div>
                     <h2>icon-cat</h2>
                 </li>
-             <li title="icon-check">
+             <li title="icon-favorite">
                     <div class="icon-box">
-                        <svg class="svg-icon-check-dims">
-                            <use xlink:href="_sprite.svg#icon-check"></use>
+                        <svg class="svg-icon-favorite-dims">
+                            <use xlink:href="_sprite.svg#icon-favorite"></use>
                         </svg>
                     </div>
-                    <h2>icon-check</h2>
+                    <h2>icon-favorite</h2>
                 </li>
              <li title="icon-filter">
                     <div class="icon-box">
@@ -557,7 +557,7 @@ SVG sprite. They may be styled via CSS.
 
         </section>
         <footer>
-            <p>Generated at Fri, 29 Mar 2024 14:13:43 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+            <p>Generated at Thu, 04 Apr 2024 14:32:07 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
         </footer>
     </body>
 </html>
